allow token creation and user edit
